--- a/src/pages/egresosCaja.html
+++ b/src/pages/egresosCaja.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </head>
 
-<body>
+<body id="page-egresos">
     <nav class="navbar">
         <div class="nav-container">
             <h1>BenMarket</h1>
