Correccion de error al boton guardar en Operaciones y agregamos funcionalidades de mejora en el recibo

--- a/src/pages/operaciones.html
+++ b/src/pages/operaciones.html
@@ -75,6 +75,21 @@
                         </select>
                     </div>
                 </div>
+                <div class="form-grid">
+                    <div class="form-grupo">
+                        <label for="cajaGasto">Caja:</label>
+                        <select id="cajaGasto" required>
+                            <option value="Caja 1">Caja 1</option>
+                            <option value="Caja 2">Caja 2</option>
+                            <option value="Caja 3">Caja 3</option>
+                            <option value="Caja Tesoreria">Caja Tesoreria</option>
+                        </select>
+                    </div>
+                    <div class="form-grupo">
+                        <label for="referenciaGasto">Referencia (opcional):</label>
+                        <input type="text" id="referenciaGasto" placeholder="Número de factura, recibo, etc.">
+                    </div>
+                </div>
                 <div class="form-botones">
                     <button type="submit" class="btn btn-primario">Guardar Movimiento</button>
                     <button type="button" class="btn btn-secundario"
