--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,7 +23,7 @@
             </ul>
             <div class="nav-usuario">
                 <span id="nombreUsuarioNav"></span>
-                <a href="#" onclick="cerrarSesion()" class="nav-link-logout">Cerrar Sesión</a>
+                <a href="#" onclick="event.preventDefault(); cerrarSesion()" class="nav-link-logout">Cerrar Sesión</a>
             </div>
         </div>
     </nav>
@@ -257,8 +257,120 @@
                             <button type="button" class="btn btn-primario" onclick="cerrarModal()">Confirmar</button>
                         </div>
                     </div>
+
+                    <!-- =================================================================== -->
+                    <!-- NUEVO: CONTENIDO PARA EL MODAL DE REGISTRO DE EFECTIVO POR SERVICIO -->
+                    <!-- =================================================================== -->
+                    <div id="contenido-servicio-efectivo">
+                        <div class="vuelto-seccion"
+                            style="background-color: transparent; padding: 0; margin-bottom: 1.5rem;">
+                            <div class="form-grupo">
+                                <label>Total del Servicio (G$):</label>
+                                <input type="text" id="totalServicioModal" readonly
+                                    style="font-weight: bold; background-color: #f0f0f0;">
+                            </div>
+                            <div class="form-grupo">
+                                <label>Monto Recibido del Cliente (G$):</label>
+                                <input type="text" id="montoRecibidoModal" readonly
+                                    style="font-weight: bold; background-color: #f0f0f0;">
+                            </div>
+                            <div class="vuelto-display">
+                                <span>Vuelto a Entregar:</span>
+                                <strong id="vueltoCalculadoModal" style="color: var(--color-peligro);">G$ 0</strong>
+                            </div>
+                        </div>
+
+                        <h4>Registrar Billetes Recibidos del Cliente</h4>
+                        <table class="tabla-conteo">
+                            <thead>
+                                <tr>
+                                    <th>Denominación</th>
+                                    <th>Cantidad</th>
+                                    <th>Monto</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tablaServicioRecibido">
+                                <!-- Se llenará dinámicamente -->
+                            </tbody>
+                        </table>
+                        <div class="total-efectivo"><strong>Total Recibido Registrado: <span
+                                    id="totalServicioRecibidoDisplay">G$ 0</span></strong></div>
+
+                        <!-- =================================================================== -->
+                        <!-- NUEVO: SECCIÓN PARA REGISTRAR EL VUELTO ENTREGADO EN SERVICIOS -->
+                        <!-- =================================================================== -->
+                        <div id="registroVueltoServicioSeccion"
+                            style="display: none; margin-top: 1rem; border-top: 2px dashed var(--color-borde); padding-top: 1rem;">
+                            <h4>Registrar Billetes del Vuelto Entregado</h4>
+                            <table class="tabla-conteo">
+                                <thead>
+                                    <tr>
+                                        <th>Denominación</th>
+                                        <th>Cantidad</th>
+                                        <th>Monto</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tablaVueltoServicio">
+                                    <!-- Se llenará dinámicamente -->
+                                </tbody>
+                            </table>
+                            <div class="total-efectivo"><strong id="totalVueltoServicioVerificacion">Total Vuelto
+                                    Registrado: G$ 0</strong></div>
+                        </div>
+
+                        <div class="form-botones" style="text-align: right; margin-top: 1.5rem;">
+                            <button type="button" class="btn btn-secundario" onclick="cerrarModal()">Cancelar</button>
+                            <button type="button" class="btn btn-primario" onclick="guardarServicioEfectivo()">Confirmar
+                                y Guardar Ingreso</button>
+                        </div>
+                    </div>
+
                 </div>
             </form>
+
+            <!-- =================================================================== -->
+            <!-- NUEVA SECCIÓN: REGISTRO EFECTIVO POR SERVICIOS (CON VUELTOS) -->
+            <!-- =================================================================== -->
+            <section id="registro-servicios-efectivo" class="formulario-arqueo"
+                style="margin-top: 2rem; border-top: 2px solid var(--color-borde); padding-top: 1.5rem;">
+                <h3 style="color: var(--color-primario); margin-bottom: 1rem;">Registro Efectivo por Servicios</h3>
+                <div class="form-grid" style="grid-template-columns: 2fr 1fr 1fr; align-items: flex-end;">
+                    <div class="form-grupo">
+                        <label for="servicioEfectivoSelect">Seleccionar Servicio:</label>
+                        <select id="servicioEfectivoSelect" required>
+                            <option value="" disabled selected>-- Elija un servicio --</option>
+                            <!-- Las opciones se cargarán dinámicamente con JavaScript -->
+                        </select>
+                    </div>
+                    <div class="form-grupo">
+                        <label for="montoServicioEfectivo">Monto del Servicio (G$):</label>
+                        <input type="text" inputmode="numeric" id="montoServicioEfectivo" placeholder="Monto a cobrar"
+                            required>
+                    </div>
+                    <div class="form-grupo">
+                        <label for="montoRecibidoServicio">Monto Recibido (G$):</label>
+                        <input type="text" inputmode="numeric" id="montoRecibidoServicio"
+                            placeholder="Dinero del cliente">
+                    </div>
+                </div>
+                <div class="form-grid"
+                    style="grid-template-columns: 2fr 1fr 1fr; align-items: center; margin-top: 1rem;">
+                    <div class="vuelto-display" style="font-size: 1.2rem; text-align: left;">
+                        <span>Vuelto a Entregar:</span>
+                        <strong id="vueltoCalculadoServicio" style="color: var(--color-peligro);">G$ 0</strong>
+                    </div>
+                    <!-- Este botón podría abrir un modal para registrar los billetes del pago y del vuelto -->
+                    <button type="button" class="btn btn-primario" style="width: 100%;"
+                        onclick="abrirModalServicioEfectivo()">
+                        Registrar Ingreso
+                    </button>
+                    <button type="button" class="btn btn-secundario" style="width: 100%;"
+                        onclick="limpiarFormularioServicioEfectivo()">
+                        Limpiar
+                    </button>
+                </div>
+            </section>
+
 
             <!-- Historial de Ingresos Agregados -->
             <div class="historial-gastos" style="margin-top: 2rem;">
