--- a/src/pages/resumen.html
+++ b/src/pages/resumen.html
@@ -23,7 +23,7 @@
             </ul>
             <div class="nav-usuario">
                 <span id="nombreUsuarioNav"></span>
-                <a href="#" onclick="cerrarSesion()" class="nav-link-logout">Cerrar Sesión</a>
+                <a href="#" onclick="event.preventDefault(); cerrarSesion()" class="nav-link-logout">Cerrar Sesión</a>
             </div>
         </div>
     </nav>
