feat: Add initial income entry page with detailed movement tracking for cash and non-cash transactions.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -181,7 +181,7 @@
                                     <th>Tarjeta (G$)</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="tbodyServiciosMovimiento">
                                 <tr>
                                     <td>AP Lote</td>
                                     <td><input type="text" id="apLoteCantMovimiento"></td>
