--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -183,7 +183,7 @@
                             </thead>
                             <tbody id="tbodyServiciosMovimiento">
                                 <tr>
-                                    <td>AP Lote</td>
+                                    <td>Aca Puedo</td>
                                     <td><input type="text" id="apLoteCantMovimiento"></td>
                                     <td><input type="text" inputmode="numeric" id="apLoteTarjetaMovimiento" value="0">
                                     </td>
@@ -195,7 +195,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Express Lote</td>
+                                    <td>Pago Express</td>
                                     <td><input type="text" id="expressCantMovimiento"></td>
                                     <td><input type="text" inputmode="numeric" id="expressTarjetaMovimiento" value="0">
                                     </td>
